Updated Product+Inventory flow